[gd_scene load_steps=3 format=3 uid="uid://cg00ytymshy12"]

[ext_resource type="Script" path="res://Battle/Field/Enemies.gd" id="1_c42di"]
[ext_resource type="PackedScene" uid="uid://dspsfw6gjdhv5" path="res://Battle/Field/field_unit.tscn" id="1_q35mc"]

[node name="Enemies" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_c42di")

[node name="Unit1" parent="." instance=ExtResource("1_q35mc")]
position = Vector2(173, 238)
place_ID = 1

[node name="Unit2" parent="." instance=ExtResource("1_q35mc")]
position = Vector2(170, 323)
place_ID = 2

[node name="Unit3" parent="." instance=ExtResource("1_q35mc")]
position = Vector2(173, 421)
place_ID = 3

[node name="Unit4" parent="." instance=ExtResource("1_q35mc")]
position = Vector2(46, 212)
place_ID = 4

[node name="Unit5" parent="." instance=ExtResource("1_q35mc")]
position = Vector2(44, 331)
place_ID = 5

[node name="Unit6" parent="." instance=ExtResource("1_q35mc")]
position = Vector2(45, 431)
place_ID = 6

[connection signal="TargetSelected" from="Unit1" to="." method="_on_target_selected"]
[connection signal="TargetSelected" from="Unit2" to="." method="_on_target_selected"]
[connection signal="TargetSelected" from="Unit3" to="." method="_on_target_selected"]
[connection signal="TargetSelected" from="Unit4" to="." method="_on_target_selected"]
[connection signal="TargetSelected" from="Unit5" to="." method="_on_target_selected"]
[connection signal="TargetSelected" from="Unit6" to="." method="_on_target_selected"]
